hcm-core/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-core
  labels:
    app: hcm-core
spec:
  type: ClusterIP
  selector:
    app: hcm-core
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
