hcm-core/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcm-ingress
  labels:
    app: hcm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: hcm.local
      http:
        paths:
          - path: /core(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hcm-core
                port:
                  number: 8085
          - path: /candidate(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: candidate-service
                port:
                  number: 8081
          - path: /organization(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: organization-service
                port:
                  number: 8100
          - path: /tenant(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tenant-service
                port:
                  number: 8082
